--- a/src/components/Admin/Content/ManageUser.scss
+++ b/src/components/Admin/Content/ManageUser.scss
@@ -5,3 +5,10 @@
         gap: 15px;
     }
 }
+.title{
+    font-size: 20px;
+    margin: 20px 0px;
+}
+.manage-user-container{
+    padding: 0px 10px;
+}
