--- a/src/components/Auth/Login.scss
+++ b/src/components/Auth/Login.scss
@@ -1,5 +1,6 @@
 .login-container {
-    padding: 20px;
+    padding     : 20px;
+
     .header {
         text-align     : right;
     }
@@ -16,20 +17,47 @@
         font-size       : 20px;
         color           : #797171;
     }
-    .content-form{
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        
-        justify-content: center;
-        gap: 15px;
+
+    .content-form {
+        display            : flex;
+        flex-direction     : column;
+        align-items        : center;
+
+        justify-content     : center;
+        gap                 : 15px;
     }
-    .btn-login{
-        background-color: black;
-        color: #fff;
+
+    .btn-login {
+        background-color     : black;
+        color                : #fff;
+
+        &:disabled {
+            background-color     : #ddd;
+            color                : #afafaf;
+            cursor               : no-drop;
+        }
     }
-    .back{
-        cursor: pointer;
-      
+
+    .back {
+        cursor     : pointer;
+
+    }
+
+}
+
+.loader-icon {
+    margin-right     : 7px;
+    top              : 2px;
+    animation        : spin 1s infinite linear;
+    color            : blue;
+}
+
+@keyframes spin {
+    from {
+        transform     : scale(1) rotate(0deg);
+    }
+
+    to {
+        transform     : scale(1) rotate(360deg);
     }
 }
