--- a/src/components/User/DetailQuiz.scss
+++ b/src/components/User/DetailQuiz.scss
@@ -1,31 +1,57 @@
-.detail-quiz-container{
-    display: flex;
-    gap: 10px;
-    padding: 30px;
-    .left-content{
-        width: 70%;
-        border: 1px solid red;
-        padding: 20px;
-        .q-body{
-            img{
-                width: 300px;
+.detail-quiz-container {
+    display     : flex;
+    gap         : 10px;
+    padding     : 30px;
+
+    .left-content {
+        width             : 70%;
+        border            : 3px solid #ccc;
+        border-radius     : 5px;
+        padding           : 20px;
+
+        .q-body {
+            img {
+                width     : 300px;
             }
         }
-        .title{
-            font-size: 30px;
-            font-weight: bold;
+
+        .title {
+            font-size       : 30px;
+            font-weight     : bold;
         }
-        .question{
-            font-size: 20px;
+
+        .question {
+            font-size      : 20px;
+            text-align     : center;
+        }
+
+        .q-content {
+            .q-image {
+                width          : 100%;
+                height         : 100px;
+                text-align     : center;
+
+                img {
+                    max-width      : 100%;
+                    max-height     : 100%;
+                }
+            }
+            .answer{
+                padding-left: 10%;
+            }
         }
     }
-    .right-content{
-        width: 30%;
-        border: 1px solid blue;
-    }
-    .footer{
-        display: flex;
-        gap:10px;
-        justify-content: center;
-    }
+}
+
+.right-content {
+    width             : 30%;
+    border            : 3px solid #ccc;
+    border-radius     : 5px;
+    padding           : 20px;
+}
+
+.footer {
+    display             : flex;
+    gap                 : 10px;
+    justify-content     : center;
 }
