design updata/delete

--- a/src/components/Admin/Content/Quiz/ManaQuestions.scss
+++ b/src/components/Admin/Content/Quiz/ManaQuestions.scss
@@ -34,14 +34,36 @@
             width     : 60%;
         }
     }
-     .label-up {
-     margin-right     : 5px;
-     cursor           : pointer;
-     color            : #9068ff;
-     font-size        : 25px;
 
-     &:hover {
-         color     : #4400ff;
-     }
- }
+    .label-up {
+        margin-right     : 5px;
+        cursor           : pointer;
+        color            : #9068ff;
+        font-size        : 25px;
+
+        &:hover {
+            color     : #4400ff;
+        }
+    }
+}
+
+.icon-add {
+    font-size     : 25px;
+    color         : #2596ff;
+    cursor        : pointer;
+
+    &:hover {
+        color     : #0989ff;
+    }
+}
+
+.icon-remove {
+    margin-left     : 10px;
+    font-size       : 25px;
+    color           : #e8771c;
+    cursor          : pointer;
+
+    &:hover {
+        color     : #ff7608;
+    }
 }
