header mutil language

--- a/src/components/Auth/Register.scss
+++ b/src/components/Auth/Register.scss
@@ -1,8 +1,13 @@
 .register-container {
     .header {
-        height         : 45px;
-        text-align     : right;
-        padding        : 5px 100px 0 100px;
+        height              : 45px;
+        
+        padding             : 5px 100px 0 100px;
+        display             : flex;
+        gap                 : 10px;
+        justify-content     : flex-end;
+        align-items         : center;
+       
 
         button {
             padding           : 3px 15px;
