--- a/src/components/Auth/Login.scss
+++ b/src/components/Auth/Login.scss
@@ -2,7 +2,11 @@
     padding     : 20px;
 
     .header {
-        text-align     : right;
+        display: flex;
+        gap:10px;
+        justify-content: flex-end;
+        align-items: flex-end;
+        padding: 5px 10px 20px;
     }
 
     .title {
