--- a/src/components/Admin/Content/Dashboard.scss
+++ b/src/components/Admin/Content/Dashboard.scss
@@ -7,25 +7,35 @@
 
     .content {
         display     : flex;
-
+        gap         : 20px;
 
         .db-left {
-            width         : 50%;
-            border        : 1px solid red;
+            width     : 50%;
+
             display       : flex;
             flex-wrap     : wrap;
+            gap           : 20px;
 
             .child {
-                width                : 50%;
-                background-color     : green;
-                border               : 1px solid blue;
-                height               : 150px;
+                width     : calc(50% - 10px);
+
+                border              : 1px solid rgb(230, 195, 138);
+                border-radius       : 10px;
+                height              : 150px;
+                display             : flex;
+                flex-direction      : column;
+                justify-content     : center;
+                align-items         : center;
             }
         }
 
         .db-right {
             width      : 50%;
-            border     : 1px solid rgb(56, 36, 36);
+            border     : 1px solid rgb(230, 195, 138);
         }
+    }
+    .text-1{
+        font-weight: 500;
+        font-size: 40px;
     }
 }
